# rlsautotest

./: .gitignore  CHANGELOG.md  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  REGRESSION.md  demo_or_footgun.md  demo_or_footgun.sql  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-smoke.yml
blog/: most-postgres-rls-ships-untested.md  rls-is-a-compliance-control.html  rls-is-a-compliance-control.md
examples/: README.md  adversarial.sql  bypass.sql  clearance.sql  customrole.sql  exotic.sql  exotic_types.sql  mockforce.sql  quoted_idents.sql  rbac.sql  rbac_tenant.sql  recursion.sql  regexfree.sql  schema.sql  seedfail.sql  synth.sql  tenancy.sql  transitions.sql  updcheck.sql  witness_array.sql  witness_cardinality.sql  witness_fncol2.sql  witness_himed.sql  witness_joint.sql  witness_novel.sql  witness_subq.sql  zeroarg.sql
regression/: run_regression.py
rlsautotest/: __init__.py  __main__.py  astutil.py  atoms.py  bypass.py  catalog.py  cli.py  commands.py  doctor.py  emit.py  lint.py  probe.py  report.py  seeding.py  snapshot.py  structs.py  values.py  witness.py
rlsautotest/strategies/: __init__.py  base.py  custom_role.py  mock.py  mockforce.py  recursion.py  relstate.py  solver.py  synth.py
test-schemas/: README.md  acl.sql  multifk.sql  order_items_bug.sql  vault.sql
tests/: test_bypass.py  test_smoke.py
